# task

./: .gitignore  HISTORY  Makefile  README  make.header  make.header.org
adpost/: ADPOST-DATA  Makefile  lib-adpost.f90  test-adpost.f90
cv/: Makefile  Readme  cv-population.data  cv-select.data.sample  cv.in.sample  cvcomm.f90  cvfile.f90  cvgout.f90  cvinit.f90  cvj-data-cases.csv  cvj-data-deaths.csv  cvj-data-prefecture.csv  cvjfile.f90  cvjmain.f90  cvjmenu.f90  cvjpopulation.f90  cvlib.f90  cvmain.f90  cvmenu.f90  cvparm.f90  cvparm.sample  cvpopulation.f90  cvrank.f90  cvregion.f90  cvselect.f90  cvsub.f90  cvview.f90  download_who  libcharx.f90
demo-ec/: fp  fp.demo004.in  wr  wr.demo001.in  wr.demo002.in  wr.demo003.in  wr.demo004.in
doc/: card.sty  default.py  doc.sty  how_to_install.tex  how_to_run.tex  install.tex  slide.sty  slide.tex  sym.sty  task-e.tex  task.tex  trcomm.tex
dp/: Makefile  dpcom1.h  dpcom1.inc  dpcom2.inc  dpcomm.f90  dpcomm.h  dpcomm.inc  dpcont.f  dpcont.f90  dpcont4.f90  dpdisp.f  dpdisp.f90  dpdispx.f90  dpdkdt.f  dpdkdt21.f  dpdkdt25.f  dpdkdtf15.f  dpdkdtf16.f  dpfpin.f  dpfpin.f90  dpglib.f90  dpgsub.f  dpgsub.f90  dphotf.f  dphotf.f90  dphotr.f  dphotr.f90  dpinit.f  dpinit.f90  dpmain.f  dpparm  (+23 more)
trmodels/Mixed_Bohm_Gyro_Bohm/: README  acextrafun.m4  aclanguage.m4  aclocal.m4  configure  configure.ac  makefile.in  makeinclude.in
trmodels/Mixed_Bohm_Gyro_Bohm/data/: input  output
trmodels/Mixed_Bohm_Gyro_Bohm/doc/: mixed_Bohm_gyro_Bohm.tex  test_mixed.tex
trmodels/Mixed_Bohm_Gyro_Bohm/source/: makefile.in  test_mixed.f
(+2500 files in other folders)
