# dnl Process this file with autoconf to produce a configure script.
#
dnl Defaults:
F90FLAGS=${F90FLAGS-}
FFLAGS=${FFLAGS-}

AC_INIT(mixed_bohm_gyro-bohm, 0.1, bateman@fusion.physics.lehigh.edu)
AC_REVISION($Id$)
AC_PREREQ(2.52)
AC_COPYRIGHT([(C) Lehigh University, Bethlehem, PA])
# dnl AC_CONFIG_SRCDIR(./source/track_ajax_dr.f90)
AC_CONFIG_FILES(makefile makeinclude source/makefile)
AC_PREFIX_DEFAULT(`(pwd)`)
AP_CANONICAL_HOST

dnl Set language enviroment and check Fortran compiler.
GM_LANG_FORTRAN90
GM_PROG_F90

dnl Checks for libraries.
dnl UD_CHECK_LIB_MATH
dnl 

dnl 

dnl 

AC_OUTPUT()
